welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:6: error: value =+ is not a member of Int
      NbOccu=+1
            ^