welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
  var L = nums.length
  var NbOccu = 0
  for (i <- 0 to L){
    if (nums(i)==lookingFor){
      NbOccu=+1
    }
  }
  return NbOccu}